# india-jobs-ai-exposure

./: README.md  aggregate_plfs.py  build_site_data.py  build_taxonomy.py  index.html  india_pipeline.py  india_seed.py  make_csv.py  make_prompt.py  occupations.csv  occupations.json  prepare_india_seed.py  process.py  prompt.md  pyproject.toml  score.py  scores.json  scrape.py  validate_india_data.py
.agents/plugins/: marketplace.json
.github/workflows/: pages.yml
india/: display_roles.json
india/processed/: occupation_packets.json
india/raw/: README.md  ncs_jobs.jsonl
plugins/india-jobs-pipeline/.codex-plugin/: plugin.json
plugins/india-jobs-pipeline/scripts/: run_seed_pipeline.py  summarize_outputs.py
plugins/india-jobs-pipeline/skills/india-jobs-pipeline/: SKILL.md
site/: data.json  index.html
tests/: test_india_pipeline.py
