[project]
name = "india-jobs-ai-exposure"
version = "0.1.0"
description = "India-focused adaptation of karpathy/jobs using NCO occupation groups and an India-specific AI exposure pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
]
